# TwinFlow-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_event.json  streamlit_app.py
ai/: influx.py  pg.py  settings.py  types.py  utils.py  workflow.py  workflow_graph.py  workflow_tools.py
ai/tools/: __init__.py  branch_tools.py  influx_tools.py  pg_tools.py  rca_tools.py
api/: webhook_server.py
app/: __init__.py  controllers.py  renderers.py
db/: init.sql
doc/: test.py  vibe coding.md
scripts/: print_workflow_graph_langsmith.py  purge_influx_buckets.py  test_ditto_ws.py
services/: alert_event_consumer.py  alert_event_ids.json  influx_alert_watcher.py  mqtt_influx_bridge.py
simulation/logistics/: logistics.cfg  sensor.py
ui/: Streamlit.html  factory_inventory_panel.html  index_new.html
ui/grafana/: factory_inventory_dashboard.json
ui/threejs-demo/: README.md  index.html
